force-app/main/default/objects/Case/fields/Promised_Monetary_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Promised_Monetary_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This can be either promised largest tax refund, promised money back in tax refund, promised recoup of expenses.</inlineHelpText>
    <label>Promised Monetary Benefit</label>
    <type>Checkbox</type>
</CustomField>