force-app/main/default/objects/Case/fields/Pullback_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Pullback_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pullback Recommended</label>
    <type>Checkbox</type>
</CustomField>