force-app/main/default/objects/Case/fields/Purchased_Productrs__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Productrs__c</fullName>
    <label>Purchased Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-PKG: Basic</fullName>
            </value>
            <value>
                <fullName>-PKG: Basic (Finance)</fullName>
            </value>
            <value>
                <fullName>-PKG: Basic (Half Payment Plan)</fullName>
            </value>
            <value>
                <fullName>-PKG: Basic + Est Taxes</fullName>
            </value>
            <value>
                <fullName>-PKG: Basic + Est Taxes (Finance)</fullName>
            </value>
            <value>
                <fullName>-PKG: Basic + Est Taxes (Half Payment)</fullName>
            </value>
            <value>
                <fullName>-PKG: Entity Setup</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro (Finance)</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro (Half Payment)</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro Plus (Half Payment)</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro + Est Taxes</fullName>
            </value>
            <value>
                <fullName>-PKG: Pro + Est Taxes (Finance)</fullName>
            </value>
            <value>
                <fullName>Company Seal</fullName>
            </value>
            <value>
                <fullName>Corporate Binder</fullName>
            </value>
            <value>
                <fullName>EIN Number</fullName>
            </value>
            <value>
                <fullName>Expedited Processing</fullName>
            </value>
            <value>
                <fullName>Full Service Bookkeeping (10/100)</fullName>
            </value>
            <value>
                <fullName>Full Service Bookkeeping (5/50)</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>LZ Biz Income Tax</fullName>
            </value>
            <value>
                <fullName>LZ Compliance</fullName>
            </value>
            <value>
                <fullName>LZ Legal Plan</fullName>
            </value>
            <value>
                <fullName>New Entity Public Filing Notice</fullName>
            </value>
            <value>
                <fullName>Operating Agreement</fullName>
            </value>
            <value>
                <fullName>Payroll - 1 Employee</fullName>
            </value>
            <value>
                <fullName>Payroll - 3 Employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 5 employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 6 employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 7 employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>