force-app/main/default/objects/Case/fields/QA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>QA_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Opportunity)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>