force-app/main/default/objects/Case/fields/QA_Rep_Assigned__c.field-meta.xml
<CustomField>
    <fullName>QA_Rep_Assigned__c</fullName>
    <label>QA Rep Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Armand Bachaspatimayum</fullName>
            </value>
            <value>
                <fullName>Barry Martin</fullName>
            </value>
            <value>
                <fullName>Esther Gonzalez</fullName>
            </value>
            <value>
                <fullName>Fong Saythanom</fullName>
            </value>
            <value>
                <fullName>Heather Blair</fullName>
            </value>
            <value>
                <fullName>Kevin Daniell</fullName>
            </value>
            <value>
                <fullName>MaiPhuong Nguyen</fullName>
            </value>
            <value>
                <fullName>Monica Warren</fullName>
                <isActive>false</isActive>
                <label>Monica Warren</label>
            </value>
            <value>
                <fullName>Netanel Pakanaev</fullName>
            </value>
            <value>
                <fullName>Steven Brock</fullName>
                <isActive>false</isActive>
                <label>Steven Brock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>