force-app/main/default/objects/Case/fields/QA_Trends__c.field-meta.xml
<CustomField>
    <fullName>QA_Trends__c</fullName>
    <label>QA Trends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Included</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Software</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Dedicated Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Entity Formation Services</fullName>
            </value>
            <value>
                <fullName>Filings (BTP)</fullName>
            </value>
            <value>
                <fullName>Filings (Other)</fullName>
            </value>
            <value>
                <fullName>Filings (PTP)</fullName>
            </value>
            <value>
                <fullName>Fulfillment Issue(s)</fullName>
            </value>
            <value>
                <fullName>Misinformation</fullName>
            </value>
            <value>
                <fullName>Monthly Fees</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Oversold</fullName>
            </value>
            <value>
                <fullName>Payment Authorization</fullName>
            </value>
            <value>
                <fullName>Payment Plans</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Portal Access</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Quarterly Estimated Tax</fullName>
            </value>
            <value>
                <fullName>Refund Policy</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>