force-app/main/default/objects/Case/fields/RAF_Amount__c.field-meta.xml
<CustomField>
    <fullName>RAF_Amount__c</fullName>
    <description>The dollar amount retained that is applied to the resource allocation fee</description>
    <inlineHelpText>Enter the dollar amount retained that is for the resource allocation fee</inlineHelpText>
    <label>RAF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>