force-app/main/default/objects/Case/fields/Reason_list__c.field-meta.xml
<CustomField>
    <fullName>Reason_list__c</fullName>
    <label>Reason (list)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Deadline</fullName>
            </value>
            <value>
                <fullName>Behind on BK Service</fullName>
            </value>
            <value>
                <fullName>No Contact &gt;30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>