force-app/main/default/objects/Case/fields/Reason_Portal__c.field-meta.xml
<CustomField>
    <fullName>Reason_Portal__c</fullName>
    <label>Reason Portal</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>