force-app/main/default/objects/Case/fields/Reassigned_Bookkeeper__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Bookkeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned Bookkeeper</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>