force-app/main/default/objects/Case/fields/Reassignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Reason__c</fullName>
    <label>Reassignment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant Left Firm</fullName>
            </value>
            <value>
                <fullName>Chemistry/Personality</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Language  or Accent</fullName>
            </value>
            <value>
                <fullName>Late/No response from advisor</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Partner Account</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Responsiveness</fullName>
            </value>
            <value>
                <fullName>Scheduling/Availability</fullName>
            </value>
            <value>
                <fullName>Specialists by Industry</fullName>
            </value>
            <value>
                <fullName>Trust/Accuracy</fullName>
            </value>
            <value>
                <fullName>Unreasonable Request</fullName>
            </value>
            <value>
                <fullName>VIP Client</fullName>
            </value>
            <value>
                <fullName>Winback Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>