force-app/main/default/objects/Case/fields/Refunds_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Refunds_Last_30_Days__c</fullName>
    <description>Sum of refunds from day the case was created - 30 days after case creation.</description>
    <inlineHelpText>Sum of refunds from day the case was created - 30 days after case creation. Will be blank until 30 days after case creation.</inlineHelpText>
    <label>Refunds - Last 30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>