force-app/main/default/objects/Case/fields/Refunds_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Refunds_Last_90_Days__c</fullName>
    <description>Sum of refunds in last 90 days as of the day the case was created. Stamps upon case creation and is not updated.</description>
    <inlineHelpText>Sum of refunds in last 90 days as of the day the case was created. Stamps upon case creation and is not updated.</inlineHelpText>
    <label>Refunds - Last 90 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>