force-app/main/default/objects/Case/fields/Renewal_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Month__c</fullName>
    <formula>Account.X2019_Renewal_Month__c</formula>
    <label>Renewal Month</label>
    <type>Date</type>
</CustomField>