force-app/main/default/objects/Case/fields/Resource_Allocation_Fee_Applied__c.field-meta.xml
<CustomField>
    <fullName>Resource_Allocation_Fee_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if we deducted a resource allocation fee if a refund was issued.</description>
    <inlineHelpText>Check the box if we applied the resource allocation fee</inlineHelpText>
    <label>Resource Allocation Fee Applied</label>
    <type>Checkbox</type>
</CustomField>