force-app/main/default/objects/Case/fields/Retained_By__c.field-meta.xml
<CustomField>
    <fullName>Retained_By__c</fullName>
    <description>Field to outline what was used to retain a client</description>
    <inlineHelpText>What was used to retain the client?</inlineHelpText>
    <label>Retained By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Needed</fullName>
            </value>
            <value>
                <fullName>Comped Service</fullName>
            </value>
            <value>
                <fullName>Discounted Service</fullName>
            </value>
            <value>
                <fullName>Downgraded Service</fullName>
            </value>
            <value>
                <fullName>Extended Refund Policy</fullName>
            </value>
            <value>
                <fullName>Postponed Payment</fullName>
            </value>
            <value>
                <fullName>Reassigned Accountant</fullName>
            </value>
            <value>
                <fullName>Refinanced Sale</fullName>
            </value>
            <value>
                <fullName>Not Retained</fullName>
            </value>
            <value>
                <fullName>Utilized Fulfillment Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>