force-app/main/default/objects/Case/fields/Retained_Client__c.field-meta.xml
<CustomField>
    <fullName>Retained_Client__c</fullName>
    <label>Retained Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>