force-app/main/default/objects/Case/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <description>This field defined the risk level associated with a subscription review case. The risk is determined based on the customer having a recent (within the past 90 days) high dollar ($500 or more) payment. 

The risk will be determined by the subscription engagement rep assigned to the case and the value will be added manually.</description>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>