force-app/main/default/objects/Case/fields/RR_AutoNum__c.field-meta.xml
<CustomField>
    <fullName>RR_AutoNum__c</fullName>
    <description>Case Auto Num for RR</description>
    <displayFormat>{0}</displayFormat>
    <label>RR_AutoNum</label>
    <type>AutoNumber</type>
</CustomField>