force-app/main/default/objects/Case/fields/RR_Formula__c.field-meta.xml
<CustomField>
    <fullName>RR_Formula__c</fullName>
    <formula>Mod(value( RR_AutoNum__c ),3) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>