force-app/main/default/objects/Case/fields/Sales_BNA__c.field-meta.xml
<CustomField>
    <fullName>Sales_BNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales BNA</description>
    <inlineHelpText>Sales BNA</inlineHelpText>
    <label>Sales BNA</label>
    <type>Checkbox</type>
</CustomField>