force-app/main/default/objects/Case/fields/Sales_Rep2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>