force-app/main/default/objects/Case/fields/Save_Attempt_made_by_team__c.field-meta.xml
<CustomField>
    <fullName>Save_Attempt_made_by_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Attempt made by team</label>
    <type>Checkbox</type>
</CustomField>