force-app/main/default/objects/Case/fields/Secondary_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Cancellation_Reason__c</fullName>
    <label>Secondary Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Cancellation_Reason__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Reviews Online</fullName>
                <label>Bad Reviews</label>
            </value>
            <value>
                <fullName>Buyer&apos;s Remorse</fullName>
            </value>
            <value>
                <fullName>Closing/Closed Business</fullName>
            </value>
            <value>
                <fullName>Communication/Timeliness</fullName>
            </value>
            <value>
                <fullName>Initial/Renewal Cost</fullName>
                <label>Cost</label>
            </value>
            <value>
                <fullName>Face to Face Interaction</fullName>
            </value>
            <value>
                <fullName>Issues with Service(s) Performed</fullName>
            </value>
            <value>
                <fullName>Lack of Service Thus Far</fullName>
            </value>
            <value>
                <fullName>Little to no business activity</fullName>
                <label>Little to no Business Activity</label>
            </value>
            <value>
                <fullName>Incorrect Info Provided/Mislead</fullName>
                <label>Misleading Information</label>
            </value>
            <value>
                <fullName>Missed/Rescheduled Appointments</fullName>
            </value>
            <value>
                <fullName>Multiple Reassignments</fullName>
            </value>
            <value>
                <fullName>Other - Please Describe in Notes</fullName>
            </value>
            <value>
                <fullName>Oversold</fullName>
            </value>
            <value>
                <fullName>Prevention Alert</fullName>
            </value>
            <value>
                <fullName>Technical Issues (Portal, VTO, etc)</fullName>
            </value>
            <value>
                <fullName>Unable to Determine</fullName>
            </value>
            <value>
                <fullName>Undersold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>