force-app/main/default/objects/Case/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Package</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No service packages found for this customer.</errorMessage>
        <filterItems>
            <field>$Source.ContactId</field>
            <operation>equals</operation>
            <valueField>Bill62__Subscription__c.Bill62__Customer__c</valueField>
        </filterItems>
        <infoMessage>Choose an accounting package to associate to this case.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bill62__Subscription__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>