force-app/main/default/objects/Case/fields/Service_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Name__c</fullName>
    <formula>Account_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Package Name</label>
    <type>Text</type>
</CustomField>