force-app/main/default/objects/Case/fields/Services_Not_Included_but_Promised__c.field-meta.xml
<CustomField>
    <fullName>Services_Not_Included_but_Promised__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This means the representative stated or implied that something was included that they did not put on the quote/sale.</inlineHelpText>
    <label>Services Not Included but Promised</label>
    <type>Checkbox</type>
</CustomField>