force-app/main/default/objects/Case/fields/SET_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>SET_Closed_Date__c</fullName>
    <label>SET Closed Date</label>
    <type>Date</type>
</CustomField>