force-app/main/default/objects/Case/fields/Stage_When_Cancel_Requested__c.field-meta.xml
<CustomField>
    <fullName>Stage_When_Cancel_Requested__c</fullName>
    <label>Stage When Cancel Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Discovery</fullName>
            </value>
            <value>
                <fullName>After Discovery; Before Advisory Series</fullName>
            </value>
            <value>
                <fullName>After Advisory Series; Before QBR</fullName>
            </value>
            <value>
                <fullName>QBR or After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>