force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Additional case hierarchy details dependent on the Type field value</description>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Additional User</fullName>
            </value>
            <value>
                <fullName>Assignment Adjustment</fullName>
            </value>
            <value>
                <fullName>Bank Sync</fullName>
            </value>
            <value>
                <fullName>Billing Inquiry</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Cancel Request</fullName>
            </value>
            <value>
                <fullName>Changes to Portal Information</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Client-Related</fullName>
            </value>
            <value>
                <fullName>Communication / Timeliness</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Connection Issue</fullName>
            </value>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate Transactions</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>Fulfillment-Related</fullName>
            </value>
            <value>
                <fullName>Improper Monetary Expectations</fullName>
            </value>
            <value>
                <fullName>Improper Service Expectations</fullName>
            </value>
            <value>
                <fullName>Incorrect Tax Advice</fullName>
            </value>
            <value>
                <fullName>Invoice Issue</fullName>
            </value>
            <value>
                <fullName>Issue with Service(s) Provided</fullName>
            </value>
            <value>
                <fullName>Lack of Follow-Through</fullName>
            </value>
            <value>
                <fullName>Lack of Services Thus Far</fullName>
            </value>
            <value>
                <fullName>Missed / Rescheduled Appointments</fullName>
            </value>
            <value>
                <fullName>Missing Transactions</fullName>
            </value>
            <value>
                <fullName>New Appointment</fullName>
            </value>
            <value>
                <fullName>Non-Tax Prep</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>