force-app/main/default/objects/Case/fields/Sub_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Category__c</fullName>
    <description>Additional level of detail depending on the Sub-Type of the case.</description>
    <inlineHelpText>Additional level of detail depending on the Sub-Type of the case.</inlineHelpText>
    <label>Sub-Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Reassignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>