force-app/main/default/objects/Case/fields/Subscription_Engagement_Rep__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Engagement_Rep__c</fullName>
    <label>Subscription Engagement Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hayley Lambert</fullName>
            </value>
            <value>
                <fullName>Joseph Milana</fullName>
            </value>
            <value>
                <fullName>Kayla Boles</fullName>
            </value>
            <value>
                <fullName>Kenneth Meeks</fullName>
            </value>
            <value>
                <fullName>Mark Johnson</fullName>
            </value>
            <value>
                <fullName>Melanie Maynard</fullName>
            </value>
            <value>
                <fullName>Michael Richmond</fullName>
            </value>
            <value>
                <fullName>Stacy McGinnis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>